# comparison-space-generation

./: Makefile  README.md  pyproject.toml
src/entity_resolution_results/ppjoin/: __init__.py  _result_to_cluster.py
src/matchescu/comparison_filtering/: __init__.py  _filters.py
src/matchescu/csg/: _binary_csg.py  _csg.py  _evaluator.py
tests/: conftest.py
tests/entity_resolution_results/ppjoin/: test_result_to_cluster.py
tests/matchescu/blocking/: test_block.py  test_lsh_blocker.py  test_sorted_neighborhood_blocker.py  test_tf_idf_blocker.py
tests/matchescu/comparison_filtering/: test_jaccard_filter.py
tests/matchescu/csg/: test_binary_csg.py
