[tool.poetry]
name = "entity-resolution-results"
version = "0.1.0"
description = ""
authors = ["Andrei Olar <andrei.olar@dpgmedia.nl>"]
readme = "README.md"
packages = [{include = "entity_resolution_results"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
