[tool.poetry]
name = "matchescu-comparison-space-generation"
version = "0.7.3"
description = ""
authors = ["Andrei Olar <andrei.olar@samlex.ro>"]
readme = "README.md"
packages = [{include = "matchescu", from="src"}]

[tool.poetry.dependencies]
python = "!=3.14.1,^3.13"
matchescu-base = "^0.23.1"
matchescu-reference-store = "^0.8.4"
stopwords = "^1.0.2"
scikit-learn = "^1.8.0"
numpy = "^2.4.2"
datasketch = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.2"
black = "^25.1.0"
matchescu-reference-extraction = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
